# RustEngine

./: Cargo.toml  README.md
src/: main.rs
src/characters/: flag.rs  gumba.rs  gura.rs  mod.rs  player.rs
src/functions/: mod.rs  name.rs
src/game/: draw_box.rs  events.rs  mod.rs  position.rs
src/map/: map_collider.rs  map_creator.rs  mod.rs
src/mobs/: mod.rs
src/sdl/: mod.rs  setup.rs
src/traits/: character.rs  collider.rs  drawer.rs  mod.rs  npc.rs  transform.rs
