[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12"
ndshape = "0.3.0"
block-mesh = "0.2.0"
ndcopy = "0.3.0"
thread_local = "1.1.7"
bevy_egui = "0.23"
float-ord = "0.3.2"
futures-lite = "1.12.0"
once_cell = "1.17.1"
bevy_atmosphere = "0.8"
bitflags = "2.0.2"
ilattice = { version = "0.3.0", features = ["glam", "morton-encoding"] }
noise = "0.8.2"
itertools = "0.11.0"

[profile.dev]
opt-level = 3

[profile.release]
lto = "thin"
